--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "NpzFile 'datasets/dsprites_ndarray_co1sh3sc6or40x32y32_64x64.npz' with keys: metadata, imgs, latents_classes, latents_values"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latent_sizes = torch.Tensor(data[\"metadata\"][()][\"latents_sizes\"])\n",
+    "# torch.index_select(latent_sizes, 0,torch.tensor([0,1,2,3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -46,14 +56,132 @@
        "tensor([ 1.,  3.,  6., 40., 32., 32.])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "latent_sizes = torch.Tensor(data[\"metadata\"][()][\"latents_sizes\"])\n",
     "latent_sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = torch.prod(latent_sizes.int())/torch.cumprod(latent_sizes.int(),axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = torch.rand(10, len(latent_sizes))\n",
+    "new_samples = (samples * (latent_sizes)).long().floor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([604108, 267977, 316720, 374397, 475746, 341568, 229797, 370521, 565354,\n",
+       "        457936], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices = torch.tensor(np.dot(new_samples.numpy(), sample.numpy())).int()\n",
+    "indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0,  2,  2, 29, 30, 12],\n",
+       "        [ 0,  1,  0, 21, 22,  9],\n",
+       "        [ 0,  1,  1, 29,  9, 16],\n",
+       "        [ 0,  1,  3,  5, 19, 29],\n",
+       "        [ 0,  1,  5, 24, 19,  2],\n",
+       "        [ 0,  1,  2, 13, 18,  0],\n",
+       "        [ 0,  0,  5, 24, 13,  5],\n",
+       "        [ 0,  1,  3,  1, 26, 25],\n",
+       "        [ 0,  2,  1, 32,  3, 10],\n",
+       "        [ 0,  1,  5,  7,  6, 16]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1,  5,  2],\n",
+       "        [ 2, 21,  2],\n",
+       "        [ 1, 35, 16],\n",
+       "        [ 2,  5, 15],\n",
+       "        [ 0, 20, 26],\n",
+       "        [ 1, 26, 11],\n",
+       "        [ 2, 24, 23],\n",
+       "        [ 0, 37,  1],\n",
+       "        [ 1, 23, 26],\n",
+       "        [ 0, 35, 24]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_samples[:,[1, 3 ,4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latent_sizes.shape"
    ]
   },
   {
