--- a/test.ipynb
+++ b/test.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -13,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +30,7 @@
        "NpzFile 'datasets/dsprites_ndarray_co1sh3sc6or40x32y32_64x64.npz' with keys: metadata, imgs, latents_classes, latents_values"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +45,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "737280"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# imgs = torch.Tensor(data['imgs'])\n",
+    "len(imgs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([737280, 64, 64])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.from_numpy(data['imgs']).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +105,7 @@
        "tensor([ 1.,  3.,  6., 40., 32., 32.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,21 +116,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([7.3728e+05, 2.4576e+05, 4.0960e+04, 1.0240e+03, 3.2000e+01, 1.0000e+00])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sample = torch.prod(latent_sizes.int())/torch.cumprod(latent_sizes.int(),axis=0)"
+    "factor_bases = torch.prod(latent_sizes.int())/torch.cumprod(latent_sizes.int(),axis=0)\n",
+    "factor_bases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "samples = torch.rand(10, len(latent_sizes))\n",
-    "new_samples = (samples * (latent_sizes)).long().floor()"
+    "new_samples = (samples * (latent_sizes)).int().floor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 1.,  3.,  6., 40., 32., 32.])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latent_sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0,  0,  0, 21, 17, 22],\n",
+       "        [ 0,  0,  2, 13,  8, 22],\n",
+       "        [ 0,  2,  0,  5, 21,  6],\n",
+       "        [ 0,  1,  0,  8, 31, 16],\n",
+       "        [ 0,  0,  0, 26,  6, 18],\n",
+       "        [ 0,  0,  0,  9, 24,  3],\n",
+       "        [ 0,  0,  2, 17, 18,  9],\n",
+       "        [ 0,  2,  0, 30, 30,  6],\n",
+       "        [ 0,  2,  3, 27, 27, 17],\n",
+       "        [ 0,  1,  2, 24,  7,  9]], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_samples"
    ]
   },
   {
@@ -108,25 +218,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0,  0,  0, 21, 17, 22],\n",
+      "        [ 0,  0,  2, 13,  8, 22],\n",
+      "        [ 0,  2,  0,  5, 21,  6],\n",
+      "        [ 0,  1,  0,  8, 31, 16],\n",
+      "        [ 0,  0,  0, 26,  6, 18],\n",
+      "        [ 0,  0,  0,  9, 24,  3],\n",
+      "        [ 0,  0,  2, 17, 18,  9],\n",
+      "        [ 0,  2,  0, 30, 30,  6],\n",
+      "        [ 0,  2,  3, 27, 27, 17],\n",
+      "        [ 0,  1,  2, 24,  7,  9]], dtype=torch.int32)\n",
+      "tensor([737280, 245760,  40960,   1024,     32,      1], dtype=torch.int32)\n",
+      "tensor([ 22070,  95510, 497318, 254960,  26834,   9987,  99913, 523206, 642929,\n",
+      "        352489], dtype=torch.int32)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([10, 6]), torch.Size([6]), torch.Size([10, 1, 128, 64]))"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(new_samples)\n",
+    "print(factor_bases.int())\n",
+    "idxs = torch.matmul(new_samples, factor_bases.int())\n",
+    "print(idxs)\n",
+    "new_samples.shape, factor_bases.shape, torch.concatenate((imgs[idxs],imgs[idxs]),axis=1).unsqueeze(1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0,  2,  2, 29, 30, 12],\n",
-       "        [ 0,  1,  0, 21, 22,  9],\n",
-       "        [ 0,  1,  1, 29,  9, 16],\n",
-       "        [ 0,  1,  3,  5, 19, 29],\n",
-       "        [ 0,  1,  5, 24, 19,  2],\n",
-       "        [ 0,  1,  2, 13, 18,  0],\n",
-       "        [ 0,  0,  5, 24, 13,  5],\n",
-       "        [ 0,  1,  3,  1, 26, 25],\n",
-       "        [ 0,  2,  1, 32,  3, 10],\n",
-       "        [ 0,  1,  5,  7,  6, 16]])"
+       "tensor(True)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.all(imgs[idxs][1] == imgs[95510])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0,  1,  4,  7, 28, 11],\n",
+       "        [ 0,  2,  0, 29,  8, 21],\n",
+       "        [ 0,  2,  3,  5, 16, 19],\n",
+       "        [ 0,  1,  0,  5, 29, 19],\n",
+       "        [ 0,  0,  2, 38, 15, 17],\n",
+       "        [ 0,  0,  1, 29, 22, 21],\n",
+       "        [ 0,  2,  3, 19, 19, 26],\n",
+       "        [ 0,  1,  5, 17, 10, 11],\n",
+       "        [ 0,  0,  1, 35, 25, 15],\n",
+       "        [ 0,  1,  1, 36, 30, 17]])"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,13 +472,33 @@
    "source": [
     "data['metadata'][()]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.randint(0,10,(1,))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Training",
+   "display_name": "WSD-WO-COMP",
    "language": "python",
-   "name": "training"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -317,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
