Simplified dsprites, made more readable

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NpzFile 'datasets/dsprites_ndarray_co1sh3sc6or40x32y32_64x64.npz' with keys: metadata, imgs, latents_classes, latents_values"
+       "NpzFile 'datasets/dSprites/dsprites_ndarray_co1sh3sc6or40x32y32_64x64.npz' with keys: metadata, imgs, latents_classes, latents_values"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Understand the structure of the dSprites dataset\n",
-    "data = np.load('datasets/dsprites_ndarray_co1sh3sc6or40x32y32_64x64.npz',\n",
+    "data = np.load('datasets/dSprites/dsprites_ndarray_co1sh3sc6or40x32y32_64x64.npz',\n",
     "                encoding='latin1', # These two\n",
     "                allow_pickle=True) # are for loading metadata\n",
     "data"
@@ -38,18 +38,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "737280"
+       "torch.Size([1, 64, 64])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.from_numpy(data['imgs'])[0].unsqueeze(0).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.randint(0, len(list(range(6))), (1,), generator=self.rand_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'imgs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# imgs = torch.Tensor(data['imgs'])\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mlen\u001b[39m(imgs)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'imgs' is not defined"
+     ]
     }
    ],
    "source": [
@@ -152,26 +182,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "latent_sizes = torch.Tensor(data[\"metadata\"][()][\"latents_sizes\"])\n",
+    "latent_sizes = torch.from_numpy(data[\"metadata\"][()][\"latents_sizes\"])\n",
     "# torch.index_select(latent_sizes, 0,torch.tensor([0,1,2,3]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 1.,  3.,  6., 40., 32., 32.])"
+       "tensor([ 1,  3,  6, 40, 32, 32])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,28 +212,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([7.3728e+05, 2.4576e+05, 4.0960e+04, 1.0240e+03, 3.2000e+01, 1.0000e+00])"
+       "tensor([737280, 245760,  40960,   1024,     32,      1])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "factor_bases = torch.prod(latent_sizes.int())/torch.cumprod(latent_sizes.int(),axis=0)\n",
-    "factor_bases"
+    "factor_bases = torch.prod(latent_sizes)/torch.cumprod(latent_sizes,axis=0)\n",
+    "factor_bases.long()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 1.,  3.,  6., 40., 32., 32.])"
+       "tensor([ 1,  3,  6, 40, 32, 32])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,25 +263,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0,  0,  0, 21, 17, 22],\n",
-       "        [ 0,  0,  2, 13,  8, 22],\n",
-       "        [ 0,  2,  0,  5, 21,  6],\n",
-       "        [ 0,  1,  0,  8, 31, 16],\n",
-       "        [ 0,  0,  0, 26,  6, 18],\n",
-       "        [ 0,  0,  0,  9, 24,  3],\n",
-       "        [ 0,  0,  2, 17, 18,  9],\n",
-       "        [ 0,  2,  0, 30, 30,  6],\n",
-       "        [ 0,  2,  3, 27, 27, 17],\n",
-       "        [ 0,  1,  2, 24,  7,  9]], dtype=torch.int32)"
+       "tensor([[ 0,  0,  4, 19, 21, 22],\n",
+       "        [ 0,  2,  1, 30, 26, 12],\n",
+       "        [ 0,  2,  4, 33, 31,  3],\n",
+       "        [ 0,  2,  1, 33,  4, 23],\n",
+       "        [ 0,  1,  2, 15, 11, 17],\n",
+       "        [ 0,  0,  3, 16, 17,  8],\n",
+       "        [ 0,  1,  3,  9,  5,  5],\n",
+       "        [ 0,  2,  1, 11,  2, 13],\n",
+       "        [ 0,  0,  5, 35, 30, 26],\n",
+       "        [ 0,  1,  3, 12, 15, 19]], dtype=torch.int32)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,24 +477,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([7.3728e+05, 2.4576e+05, 4.0960e+04, 1.0240e+03, 3.2000e+01,\n",
-       "       1.0000e+00])"
+       "array([ 1,  3,  6, 40, 32, 32])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "factor_sizes = np.array(data[\"metadata\"][()][\"latents_sizes\"])\n",
-    "np.prod(factor_sizes)/ np.cumprod(factor_sizes) # number of images per factor"
+    "factor_sizes\n",
+    "# np.prod(factor_sizes)/ np.cumprod(factor_sizes) # number of images per factor"
    ]
   },
   {
@@ -622,9 +652,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "WSD-WO-COMP",
+   "display_name": "WSD_WO_COMP",
    "language": "python",
-   "name": "python3"
+   "name": "wsd_wo_comp"
   },
   "language_info": {
    "codemirror_mode": {
